Work on jersey server-side implementation