@@ -18,7 +18,7 @@ package test.com.wealdtech.hawk;
 
 import java.io.InputStream;
 import java.net.HttpURLConnection;
-import java.net.URL;
+import java.net.URI;
 
 import org.testng.annotations.BeforeClass;
 import org.testng.annotations.Test;
@@ -29,7 +29,7 @@ import com.wealdtech.hawk.HawkCredentials;
 public class testHawkClient
 {
   private HawkCredentials testcredentials;
-  private URL validurl1, validurl2, invalidurl1, invalidurl2;
+  private URI validuri1, validuri2, invaliduri1, invaliduri2;
 
   @BeforeClass
   public void setUp() throws Exception
@@ -39,17 +39,17 @@ public class testHawkClient
         .key("werxhqb98rpaxn39848xrunpaw3489ruxnpa98w4rxn")
         .algorithm("hmac-sha-256")
         .build();
-    this.validurl2 = new URL("http://localhost:18234/testpath");
-    this.validurl1 = new URL("http://localhost:18234/testpath/subpath?param1=val1&param2=val2");
+    this.validuri2 = new URI("http://localhost:18234/testpath");
+    this.validuri1 = new URI("http://localhost:18234/testpath/subpath?param1=val1&param2=val2");
   }
 
   @Test
   public void testValidRequest1() throws Exception
   {
     final HawkClient testclient = new HawkClient(this.testcredentials);
-    final String authorizationheader = testclient.generateAuthorizationHeader(this.validurl1, "get", null);
+    final String authorizationheader = testclient.generateAuthorizationHeader(this.validuri1, "get", null);
 
-    HttpURLConnection connection = (HttpURLConnection)this.validurl1.openConnection();
+    HttpURLConnection connection = (HttpURLConnection)this.validuri1.openConnection();
     connection.setRequestProperty("Authorization", authorizationheader);
     connection.setDoOutput(true);
     InputStream is = connection.getInputStream();
