@@ -18,7 +18,7 @@ package test.com.wealdtech.hawk;
 
 import static org.testng.Assert.*;
 
-import java.net.URL;
+import java.net.URI;
 
 import org.testng.annotations.BeforeClass;
 import org.testng.annotations.Test;
@@ -31,35 +31,35 @@ import com.wealdtech.hawk.HawkCredentials;
 public class TestHawk
 {
   private HawkCredentials testhc1;
-  private URL testurl1;
-  private URL testurl2;
+  private URI testuri1;
+  private URI testuri2;
 
   @BeforeClass
   public void setUp() throws Exception
   {
     this.testhc1 = new HawkCredentials.Builder().keyId("testkeyid").key("testkey").algorithm("hmac-sha-256").build();
-    this.testurl1 = new URL("http://www.example.com/test/path");
-    this.testurl2 = new URL("https://www.example.com/test/path/two?one=1&two=two");
+    this.testuri1 = new URI("http://www.example.com/test/path");
+    this.testuri2 = new URI("https://www.example.com/test/path/two?one=1&two=two");
   }
 
   @Test
   public void testMAC() throws DataError, ServerError
   {
-    String testmac1 = Hawk.calculateMAC(this.testhc1, 12345L, this.testurl1, "testnonce", "GET", null);
+    String testmac1 = Hawk.calculateMAC(this.testhc1, 12345L, this.testuri1, "testnonce", "GET", null);
     assertEquals(testmac1, "TQcJRRT6IlUStBw9VmyALdHM/2HmO5cqc20jPXsCMoM=");
   }
 
   @Test
   public void testHttpsMAC() throws DataError, ServerError
   {
-    String testmac1 = Hawk.calculateMAC(this.testhc1, 54321L, this.testurl2, "testnonce", "POST", null);
+    String testmac1 = Hawk.calculateMAC(this.testhc1, 54321L, this.testuri2, "testnonce", "POST", null);
     assertEquals(testmac1, "b2rbmwxNmtK3Q+s1O4Ac7EJQgOjNJcmeE3LEUegq8x4=");
   }
 
   @Test
   public void testExtDataMAC() throws DataError, ServerError
   {
-    String testmac1 = Hawk.calculateMAC(this.testhc1, 12345L, this.testurl1, "testnonce", "GET", "Extra data");
+    String testmac1 = Hawk.calculateMAC(this.testhc1, 12345L, this.testuri1, "testnonce", "GET", "Extra data");
     assertEquals(testmac1, "CGxOiUfSKmdVfk030DE454MQ6jW/dKlSLi5iIz9IC/I=");
   }
 
